--- a/CloudNativeHackathonExpressApp/views/layout.pug
+++ b/CloudNativeHackathonExpressApp/views/layout.pug
@@ -3,5 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/main.css')
+    link(rel='icon', href='/images/favicon.ico')
   body
     block content
